--- a/views/home.erb
+++ b/views/home.erb
@@ -38,7 +38,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
             <li><a href="/database">Main Database </a></li>
-            <li><a href="bruno">Add an employee</a></li>
+            <li><a href="/addpeep">Add an employee</a></li>
             <li><a href="#">P</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Games <span class="caret"></span></a>
