--- a/views/datab.erb
+++ b/views/datab.erb
@@ -52,45 +52,15 @@
               </td>
             </tr>
 
-              <tr>
-                <td>gavin</td>
-                <td>345</td>
-                <td>663</td>
-                <td>campus director</td>
-                <td>0</td>
-                <td>feew</td>
-                <td>oijefew</td>
-              </tr>
-
-              <tr>
-                <td>pepito</td>
-                <td>34</td>
-                <td>2</td>
-                <td>instructor</td>
-                <td>0</td>
-                <td>wafjoiwe</td>
-                <td>34</td>
-              </tr>
-
-              <tr>
-                <td>maria</td>
-                <td>34852</td>
-                <td>6164 hollow hollow rd</td>
-                <td>instructor</td>
-                <td>0</td>
-                <td>slacker</td>
-                <td>octocat</td>
-              </tr>
-
-              <% @employees.each do |employee| %>
+              <% @employees["id"] %>
                 <tr>
-                  <td><a href="/show_info?id=<%= employee['id'] %>"><%= employee["name"] %></a></td>
-                  <td><%= employee["phone"] %></td>
-                  <td><%= employee["address"]%></td>
-                  <td><%= employee["position"]%></td>
-                  <td><%= employee["salary"] %></td>
-                  <td><%= employee["slack"]%></td>
-                  <td><%= employee["github"]%></td>
+                  <td><a href="#"><%= @employee["name"] %></a></td>
+                  <td><%= @employee["phone"] %></td>
+                  <td><%= @employee["address"]%></td>
+                  <td><%= @employee["position"]%></td>
+                  <td><%= @employee["salary"] %></td>
+                  <td><%= @employee["slack"]%></td>
+                  <td><%= @employee["github"]%></td>
                 </tr>
               <% end %>
 
