--- a/views/home.erb
+++ b/views/home.erb
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-            <li><a href="/database">Main Database </a></li>
+            <li><a href="/employees">Main Database </a></li>
             <li><a href="/addpeep">Add an employee</a></li>
             <li><a href="#">P</a></li>
             <li class="dropdown">
