--- a/views/addpeep.erb
+++ b/views/addpeep.erb
@@ -27,34 +27,34 @@
       </div>
     </div>
 
-      <form action="/add_employee" method= "get">
+      <form action="/create_employee" method= "get">
         <div class="form-group">
-          <label for="Inputname">Name</label>
-          <input type="email" class="form-control" id="name" placeholder="">
+          <label for="exampleInputEmail1">Name</label>
+          <input type="text" name="name" class="form-control" id="exampleInputEmail1" placeholder="">
         </div>
         <div class="form-group">
-          <label for="inoutphone">Phone Number</label>
-          <input type="password" class="form-control" id="phone " placeholder="">
+          <label for="exampleInputEmail1">Phone Number</label>
+          <input type="text" name="phone" class="form-control" id="exampleInputEmail1" placeholder="">
         </div>
         <div class="form-group">
-          <label for="address">Address</label>
-          <input type="password" class="form-control" id="address" placeholder="">
+          <label for="exampleInputEmail1">Address</label>
+          <input type="text" name="address" class="form-control" id="exampleInputEmail1" placeholder="">
         </div>
         <div class="form-group">
-          <label for="position">Position</label>
-          <input type="text" class="form-control" id="position" placeholder="">
+          <label for="exampleInputEmail1">Position</label>
+          <input type="text" name="position" class="form-control" id="position" placeholder="">
         </div>
         <div class="form-group">
-          <label for="inoutsalary">Salary</label>
-          <input type="text" class="form-control" id="salary" placeholder="">
+          <label for="exampleInputEmail1">Salary</label>
+          <input type="text" name="salary" class="form-control" id="salary" placeholder="">
         </div>
         <div class="form-group">
-          <label for="inputgit">GitHub</label>
-          <input type="text" class="form-control" id="github" placeholder="">
+          <label for="exampleInputEmail1">GitHub</label>
+          <input type="text" name="github" class="form-control" id="exampleInputEmail1" placeholder="">
         </div>
         <div class="form-group">
-          <label for="inputlslack">Slack</label>
-          <input type="text" class="form-control" id="slack" placeholder="">
+          <label for="exampleInputEmail1">Slack</label>
+          <input type="text" name="slack" class="form-control" id=""exampleInputEmail1"" placeholder="">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
         </form>
