--- a/views/home.erb
+++ b/views/home.erb
@@ -39,9 +39,9 @@
             <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
             <li><a href="/employees">Main Database </a></li>
             <li><a href="/addpeep">Add an employee</a></li>
-            <li><a href="#">P</a></li>
+            <li><a href="#">42</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Games <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sample drop<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="#">Action</a></li>
                 <li><a href="#">Another action</a></li>
