--- a/views/addpeep.erb
+++ b/views/addpeep.erb
@@ -30,7 +30,7 @@
       <form action="/create_employee" method= "get">
         <div class="form-group">
           <label for="exampleInputEmail1">Name</label>
-          <input type="text" name="name" class="form-control" id="exampleInputEmail1" placeholder="">
+          <input type="text" name="name" value="<%= @employee["name"]%>" class="form-control">
         </div>
         <div class="form-group">
           <label for="exampleInputEmail1">Phone Number</label>
