--- a/views/editpeep.erb
+++ b/views/editpeep.erb
@@ -1,1 +1,69 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>TIY database</title>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.2/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+
+    <div class= "container">
+    <div class="jumbotron">
+      <div class="media">
+      <div class="media-body">
+        <h1>TIY Database</h1>
+        <p><span class="glyphicon glyphicon-tree-conifer" aria-hidden="true"></span> Please enter the information of the new person and click 'Submit' when complete</p>
+      </div>
+      </div>
+    </div>
+
+      <form action="/create_employee" method= "get">
+        <div class="form-group">
+          <label for="exampleInputEmail1">Name</label>
+          <input type="text" name="name" value="<%= @employee["name"]%>" class="form-control" id="exampleInputEmail1" placeholder="">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Phone Number</label>
+          <input type="text" name="phone" value="<%= @employee["phone"]%>" class="form-control" id="exampleInputEmail1" placeholder="">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Address</label>
+          <input type="text" name="address" value="<%= @employee["address"]%>" class="form-control" id="exampleInputEmail1" placeholder="">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Position</label>
+          <input type="text" name="position" value="<%= @employee["position"]%>" class="form-control" id="position" placeholder="">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Salary</label>
+          <input type="text" name="salary" value="<%= @employee["salary"]%>" class="form-control" id="salary" placeholder="">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputEmail1">GitHub</label>
+          <input type="text" name="github" value="<%= @employee["github"]%>" class="form-control" id="exampleInputEmail1" placeholder="">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Slack</label>
+          <input type="text" name="slack" value="<%= @employee["slack"]%>" class="form-control" id=""exampleInputEmail1"" placeholder="">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+    </div>
+
+    <!-- << dia href="/employees">Click here for employees</a> -->
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  </body>
+</html>
