almost done search almost working

--- a/views/home.erb
+++ b/views/home.erb
@@ -52,11 +52,11 @@
               </ul>
             </li>
           </ul>
-          <form class="navbar-form navbar-right">
+          <form action="/search" method="get" class="navbar-form navbar-right">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
+              <input type="search" name="search" class="form-control" placeholder="Search">
+              <button type="submit" class="btn btn-default">Submit</button>
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
           </form>
         </div>
       </div>
@@ -68,7 +68,7 @@
         <div class="media">
         <div class="media-body">
           <h1>TIY Database</h1>
-          <p><span class="glyphicon glyphicon-tree-conifer" aria-hidden="true"></span> Welcome to the TIY Database. This database will help you properly display and maintain and track people in our wonderful organization. Please utilize the links in the Navbar above to display the database and make changes.</p>
+          <p><span class="glyphicon glyphicon-tree-conifer" aria-hidden="true"></span> Welcome to the TIY Database. This database will help you properly display and maintain and track people in our organization. Please utilize the links in the Navbar above to display the database and make changes. You can utilize the Search box above.</p>
         </div>
         </div>
       </div>
