not it's working : )

--- a/views/search.erb
+++ b/views/search.erb
@@ -57,15 +57,15 @@
             </tr>
              <% @employees.each do |employee| %>
             <tr>
-              <td><%= @employee["id"] %></td>
-              <td><a href=""/displaypeep?id=<%= employee.id %>""><%= @employee["name"] %></a></td>
-              <td><%= @employee["phone"] %></td>
-              <td><%= @employee["address"]%></td>
-              <td><%= @employee["position"]%></td>
-              <td><%= @employee["salary"] %></td>
-              <td><%= @employee["slack"]%></td>
-              <td><%= @employee["github"]%></td>
-              <td><a class="btn btn-warning btn-sm" href="/editpeep?id=<%= @employee["id"] %>" role="button">Edit</a></td>
+              <td><%= employee["id"] %></td>
+              <td><a href=""/displaypeep?id=<%= employee["id"] %>""><%= employee["name"] %></a></td>
+              <td><%= employee["phone"] %></td>
+              <td><%= employee["address"]%></td>
+              <td><%= employee["position"]%></td>
+              <td><%= employee["salary"] %></td>
+              <td><%= employee["slack"]%></td>
+              <td><%= employee["github"]%></td>
+              <td><a class="btn btn-warning btn-sm" href="/editpeep?id=<%= employee["id"] %>" role="button">Edit</a></td>
             </tr>
             <% end %>
           </tbody>
